// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistrationNoEntry renders with a value 1`] = `
<div
  className="wmrards-fe-group wmrards-m-t-20"
>
  <ProgressIndicator
    sectionName="About you"
    sectionPosition="Section 2 of 2"
  />
  <Question
    text="Do you have a Ring and Ride registration number?"
  />
  <TextInput
    error={null}
    fieldName="registrationNo"
    label={
      <React.Fragment>
         
        Registration number
        <p>
          For example, 1234567890
        </p>
      </React.Fragment>
    }
    validation={[Function]}
  />
</div>
`;

exports[`RegistrationNoEntry renders with an error 1`] = `
<div
  className="wmrards-fe-group wmrards-m-t-20"
>
  <ProgressIndicator
    sectionName="About you"
    sectionPosition="Section 2 of 2"
  />
  <Question
    text="Do you have a Ring and Ride registration number?"
  />
  <TextInput
    error="Required"
    fieldName="registrationNo"
    label={
      <React.Fragment>
         
        Registration number
        <p>
          For example, 1234567890
        </p>
      </React.Fragment>
    }
    validation={[Function]}
  />
</div>
`;

exports[`RegistrationNoEntry renders with no value 1`] = `
<div
  className="wmrards-fe-group wmrards-m-t-20"
>
  <ProgressIndicator
    sectionName="About you"
    sectionPosition="Section 2 of 2"
  />
  <Question
    text="Do you have a Ring and Ride registration number?"
  />
  <TextInput
    error={null}
    fieldName="registrationNo"
    label={
      <React.Fragment>
         
        Registration number
        <p>
          For example, 1234567890
        </p>
      </React.Fragment>
    }
    validation={[Function]}
  />
</div>
`;
